# dbt-template

./: dbt_project.yml  pyproject.toml
.devcontainer/: devcontainer.json
models/example/: my_second_dbt_model.sql  schema.yml
